--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 id="user-name"
                 class="input-column"
               />
-              <svg class="input-icon" width="12" height="12">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -570,7 +570,7 @@
                 id="user-phone"
                 class="input-column"
               />
-              <svg class="input-icon" width="13" height="13">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -580,15 +580,14 @@
             <label class="modal-label" for="user-email">Email</label>
 
             <div class="input-wrap">
-              <svg class="input-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
               <input
                 class="input-column"
                 id="user-email"
                 type="email"
-                name="user-email"
-              />
+                name="user-email"/>
+                 <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
             </div>
           </div>
 
@@ -604,7 +603,6 @@
           </div>
 
           <div class="input-checkbox">
-            <input
               id="user-privacy"
               class="checkbox visually-hidden"
               type="checkbox"
