--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             </label>
             <button class="subscribe-button" type="submit">
               Subscribe
-              <svg class="icon-send" width="24" height="20">
+              <svg class="icon-send" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -603,12 +603,12 @@
           </div>
 
           <div class="input-checkbox">
-              id="user-privacy"
-              class="checkbox visually-hidden"
+              <input class="checkbox visually-hidden"
               type="checkbox"
+              id="user-privacy"
               name="user-privacy"
-              value="true"
-            />
+              value="true"/>
+          
             <label class="privacy-label" for="user-privacy">
               <span class="checkbox-item">
                 <svg class="checkbox-icon" width="10" height="8">
